# sabine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  default-gnu.nix  default.nix  flake.nix  justfile  shell-gnu.nix  shell.nix
.github/scripts/: log.sh
.github/workflows/: test.yml
include/: .gitkeep  compiler.h  errors.h  lexer.h  node.h  parse.h  process.h  token.h
src/: compiler.c  lexer.c  lexproc.c  main.c  node.c  parser.c  process.c  token.c
tests/: .gitignore  binary.c  comment.c  expression.c  first_node.c  hex.c  keywords.c  newline.c  number.c  numtype.c  operator.c  parentheses.c  quote.c  string.c
